# ann_tool_v1

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  StatusBar.tsx  TextOverlayEditor.tsx  TimelineCanvas.tsx  VideoControls.tsx
src/lib/: ann.ts  csv.ts  labels.ts  path.ts  segments.ts  time.ts  types.ts
src/lib/__tests__/: csv.test.ts  labels.test.ts  segments.test.ts  time.test.ts
